--- a/templates/process/pca_rst.html
+++ b/templates/process/pca_rst.html
@@ -1,6 +1,7 @@
 {% extends "process/base.html" %}
 {% load static from staticfiles %}
-{% block title %}主页{% endblock %}
+{% block title %}PCA结果{% endblock %}
+
 {% block head %}
     <link rel="stylesheet" type="text/css" media="screen" href="{% static "css/jquery-confirm.min.css" %}" />
     <script type="text/javascript" src="{% static "js/jquery-confirm.min.js" %}" charset="UTF-8"></script>
@@ -19,13 +20,13 @@
 {% block content %}
 <div class="container">
   <div class="row">
+    app事故: {{ app_incidence }}, 违法举报:{{ violation }}, 122报警: {{ call_incidence }},高德拥堵: {{ crowd_index }}
     <div id="toolbar">
            <div class="form-inline" role="form">
-            <form class="form-inline"  action="{% url 'process:index' %}" method="POST">
+            <form class="form-inline"  action="{% url 'process:test_region_now' %}" method="POST">
                <div class="form-group">
-                    <label for="train_region" class="control-label"><small>训练区域:</small></label>
+                    <label for="train_region" class="control-label"><small>测试区域:</small></label>
                     <select id="region_select" class="form-control input-sm" name="train_region" style="width:60px;">
-                        <option value="0" selected="selected">全部</option>
                           {% for k,v in regions.iteritems %}
                             <option value="{{ v }}">{{ k }}</option>
                           {% endfor %}
@@ -50,7 +51,7 @@
                     <input class="form-control form-date input-sm"  type="text" name="date_end" style="width: 80px;"  data-date-format="yyyy-mm-dd" value="2017-02-28" >
                </div>&nbsp;
             <div class="form-group">
-                <input type="submit" class="btn btn-default btn-sm" value="训练"/>
+                <input type="submit" class="btn btn-default btn-sm" value="测试"/>
                 {% csrf_token %}
             </div>&nbsp;
                 </form>
