--- a/templates/process/base_bk.html
+++ b/templates/process/base_bk.html
@@ -1,16 +1,12 @@
 {% load static from staticfiles %}
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-	<style type="text/css">
-		body, html{width: 100%;height: 100%;margin:0;}
-		#container{height:5%;width:100%;}
-		#allmap{height:95%;width:100%;margin-bottom: 0}
-	</style>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE9" />
     <title>{% block title %}{% endblock %}</title>
-	<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=eM0GfCwd27kZRyM49ZOkvkOaidDXz6Wf"></script>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=eM0GfCwd27kZRyM49ZOkvkOaidDXz6Wf"></script>
     <script type="text/javascript" src="{% static "js/jquery.min.js" %}" charset="UTF-8"></script>
 
     <script type="text/javascript" src="{% static "js/jquery-confirm.min.js" %}" charset="UTF-8"></script>
@@ -21,6 +17,9 @@
     <script src="{% static "js/html5shiv.js" %}"></script>
     <script src="{% static "js/respond.min.js" %}"></script>
     <script type="text/javascript" src="{% static "js/loaders.css.js" %}"></script>
+    <style type="text/css">
+            body{margin-top:60px;padding-bottom: 60px;}
+    </style>
     <script type="text/javascript">
     function flash(text,time)
     {
@@ -33,6 +32,7 @@
     </script>
     {% block head %}{% endblock %}
 </head>
+
 <body>
     {% block content %}
     {% endblock %}
@@ -44,6 +44,6 @@
     <div><label style="color:White;" id="loading_text"></label></div>
 </div>
 </body>
+    {% block endscript %}
+    {% endblock %}
 </html>
-{% block endscript %}
-{% endblock %}
