--- a/templates/process/base.html
+++ b/templates/process/base.html
@@ -17,10 +17,14 @@
     <link rel="stylesheet" type="text/css" media="screen" href="{% static "css/jquery-confirm.min.css" %}" />
     <link rel="stylesheet" type="text/css" media="screen" href="{% static "css/bootstrap.css" %}" />
     <link rel="stylesheet" type="text/css" media="screen" href="{% static "css/loaders.css" %}" />
+    <link rel="stylesheet" type="text/css" media="screen" href="{% static "css/flat-ui.css" %}" />
+    <link rel="stylesheet" type="text/css" media="screen" href="{% static "css/bootstrap-datetimepicker.css" %}" />
     <script type="text/javascript" src="{% static "js/bootstrap.js" %}" ></script>
+    <script type="text/javascript" src="{% static "js/flat-ui.js" %}" ></script>
     <script src="{% static "js/html5shiv.js" %}"></script>
     <script src="{% static "js/respond.min.js" %}"></script>
     <script type="text/javascript" src="{% static "js/loaders.css.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/bootstrap-datetimepicker.js" %}" ></script>
     <script type="text/javascript">
     function flash(text,time)
     {
