--- a/templates/process/base.html
+++ b/templates/process/base.html
@@ -25,6 +25,7 @@
     <script src="{% static "js/respond.min.js" %}"></script>
     <script type="text/javascript" src="{% static "js/loaders.css.js" %}"></script>
     <script type="text/javascript" src="{% static "js/bootstrap-datetimepicker.js" %}" ></script>
+    <script type="text/javascript" src="{% static "js/bootstrap-datetimepicker.zh-CN.js" %}" ></script>
     <script type="text/javascript">
     function flash(text,time)
     {
