--- a/templates/process/train.html
+++ b/templates/process/train.html
@@ -59,3 +59,17 @@
   </div>
 </div>
 {% endblock %}
+{% block endscript %}
+    <script type="text/javascript">
+        $('.form-date').datetimepicker({
+          language:'zh-CN',
+          weekStart:1,
+          todayBtn:1,
+          autoclose:1,
+          todayHighlight:1,
+          startView:2,
+          minView:2,
+          forceParse:0
+        });
+    </script>
+{% endblock %}
