--- a/templates/process/base.html
+++ b/templates/process/base.html
@@ -10,7 +10,7 @@
 		#allmap{height:95%;width:100%;margin-bottom: 0}
 	</style>
     <title>{% block title %}{% endblock %}</title>
-	<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak="></script>
+	<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=eM0GfCwd27kZRyM49ZOkvkOaidDXz6Wf"></script>
     <script type="text/javascript" src="{% static "js/jquery.min.js" %}" charset="UTF-8"></script>
 
     <script type="text/javascript" src="{% static "js/jquery-confirm.min.js" %}" charset="UTF-8"></script>
