对于某些大队获取的结果中由于会出现全0的情况因此会出现nan的normed_array 建议训练更长周期的数据

--- a/templates/process/train.html
+++ b/templates/process/train.html
@@ -23,7 +23,7 @@
             },
         });
         var train_region = $("#region_select").find("option:selected").val();
-        var is_group = t$("#group_select").find("option:selected").val();
+        var is_group = $("#group_select").find("option:selected").val();
         var week_agg = $("#week_select").find("option:selected").val();
         var date_start = $("#date_start").val();
         var date_end = $("#date_end").val();
